[gd_scene load_steps=8 format=3 uid="uid://d1wyhj8x6yanh"]

[ext_resource type="Script" path="res://rhythm_part.gd" id="1_5e4kx"]
[ext_resource type="PackedScene" uid="uid://cth04fikosjl6" path="res://idle_arrow_left.tscn" id="2_dssn6"]
[ext_resource type="Texture2D" uid="uid://ccaoqobxiw3m" path="res://rythm_bg.jpg" id="2_ih35u"]
[ext_resource type="PackedScene" uid="uid://dqfcgbf1oqw03" path="res://idle_arrow_up.tscn" id="4_lhtjh"]
[ext_resource type="FontFile" uid="uid://da1qdy405mw0s" path="res://slkscr.ttf" id="6_4hji2"]
[ext_resource type="PackedScene" uid="uid://b0r321c7qrb81" path="res://idle_arrow_right.tscn" id="6_x3pok"]
[ext_resource type="PackedScene" uid="uid://bual8k30pmg10" path="res://conductor.tscn" id="7_scnvv"]

[node name="Rhythm Part" type="Node2D"]
script = ExtResource("1_5e4kx")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.58912, 1.32296)
texture = ExtResource("2_ih35u")

[node name="Create" type="Node2D" parent="."]

[node name="Marker2D_AL" type="Marker2D" parent="Create"]
position = Vector2(192, 576)

[node name="Marker2D_AU" type="Marker2D" parent="Create"]
position = Vector2(576, 576)

[node name="Marker2D_AR" type="Marker2D" parent="Create"]
position = Vector2(960, 576)

[node name="Idle_ArrowLeft" parent="." instance=ExtResource("2_dssn6")]
position = Vector2(192, 128)

[node name="Idle_ArrowUp" parent="." instance=ExtResource("4_lhtjh")]
position = Vector2(576, 128)

[node name="Idle_ArrowRight" parent="." instance=ExtResource("6_x3pok")]
position = Vector2(960, 128)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Score" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Score"]
offset_right = 1152.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_4hji2")
theme_override_font_sizes/font_size = 50
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Conductor" parent="." instance=ExtResource("7_scnvv")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
